update: work experience

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
     <nav aria-label="Primary">
       <ul id="primaryNav" class="nav-menu">
-        <li><a href="#projects">Research & Projects</a></li>
+            <li><a href="#experience">Experience</a></li> 
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#works">Publications</a></li>
         <li><a href="#certs">Certs & Badges</a></li>
         <li><a href="#blog">Blog</a></li>
@@ -186,6 +187,72 @@
         </div>
       </div>
     </section>
+
+    <!-- WORK EXPERIENCE -->
+<section id="experience" class="section hover-scope">
+  <div class="container">
+    <h2>Work Experience</h2>
+    <p class="lead">Professional roles applying theoretical knowledge to real-world systems and infrastructure.</p>
+
+    <div class="grid">
+
+      <!-- Janki Cables -->
+      <article class="card experience-card">
+        <div class="experience-header">
+          <div class="experience-title">
+            <h3>Network Administrator</h3>
+            <p class="company">Janki Cables</p>
+          </div>
+          <div class="experience-meta">
+            <span class="date">Apr 2025 – Present</span>
+            <span class="location">Full-time</span>
+          </div>
+        </div>
+        <div class="experience-body">
+          <ul class="experience-list">
+            <li>Applied theoretical networking concepts (TCP/IP, routing algorithms) to optimize enterprise infrastructure</li>
+            <li>Designed and implemented network architectures serving 500+ clients with 99.9% uptime</li>
+            <li>Developed analytical models for bandwidth optimization and traffic analysis</li>
+          </ul>
+          <div class="experience-skills">
+            <span class="pill">TCP/IP</span>
+            <span class="pill">Network Architecture</span>
+            <span class="pill">Infrastructure</span>
+            <span class="pill">Traffic Analysis</span>
+          </div>
+        </div>
+      </article>
+
+      <!-- Bajra Technologies -->
+      <article class="card experience-card">
+        <div class="experience-header">
+          <div class="experience-title">
+            <h3>Trainee – Ruby on Rails</h3>
+            <p class="company">Bajra Technologies</p>
+          </div>
+          <div class="experience-meta">
+            <span class="date">Nov 2024 – Feb 2025</span>
+            <span class="location">Internship</span>
+          </div>
+        </div>
+        <div class="experience-body">
+          <ul class="experience-list">
+            <li>Implemented distributed system components for scalable streaming platform</li>
+            <li>Applied software engineering principles (OOP, design patterns) in production environment</li>
+            <li>Optimized database algorithms reducing query time by 40% through indexing strategies</li>
+          </ul>
+          <div class="experience-skills">
+            <span class="pill">Ruby on Rails</span>
+            <span class="pill">Distributed Systems</span>
+            <span class="pill">Database Optimization</span>
+            <span class="pill">OOP</span>
+          </div>
+        </div>
+      </article>
+
+    </div>
+  </div>
+</section>
 
     <!-- PROJECTS -->
 <section id="projects" class="section hover-scope">
