update: resume link

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
 
         <!-- Resume Right -->
         <div class="foot-cta">
-          <a class="resume-btn" href="assets/Sumit_Sah_Resume.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="resume-btn" href="https://drive.google.com/file/d/1PKXmP5zoaHBZysdhuRuYv9c9yLVDsiVt/view?usp=sharing" target="_blank" rel="noopener noreferrer">
             Download Resume
           </a>
         </div>
