update: company name

--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
 
         <div class="grid">
 
-          <!-- Giga Netwroks -->
+          <!-- Janki Traders -->
           <article class="card experience-card">
             <div class="experience-header">
               <div class="experience-title">
                 <h3>Junior Network Engineer</h3>
-                <p class="company">Giga Networks Pvt. Ltd.</p>
+                <p class="company">Shree New Janki Traders</p>
               </div>
               <div class="experience-meta">
                 <span class="date">Apr 2025 – Present</span>
